Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-41430

memcached crashed in MagmaKVStore::compactionCallBack() from /opt/couchbase/bin/../lib/libep.so during magma::DocSeqGCContext::Transform

    XMLWordPrintable

Details

    • Untriaged
    • 1
    • Yes
    • Magma 2020-Oct1, Magma 2020-NOV19

    Description

      Core was generated by `/opt/couchbase/bin/memcached -C /opt/couchbase/var/lib/couchbase/config/memcach'.
       #0  0x00007f3421ce5337 in raise () from /lib64/libc.so.6
       #0  0x00007f3421ce5337 in raise () from /lib64/libc.so.6
       #1  0x00007f3421ce6a28 in abort () from /lib64/libc.so.6
       #2  0x00007f3422843195 in __gnu_cxx::__verbose_terminate_handler() () from /opt/couchbase/bin/../lib/libstdc++.so.6
       #3  0x00000000005a4752 in backtrace_terminate_handler() ()
       #4  0x00007f3422840f86 in __cxxabiv1::__terminate(void (*)()) () from /opt/couchbase/bin/../lib/libstdc++.so.6
       #5  0x00007f3422840fd1 in std::terminate() () from /opt/couchbase/bin/../lib/libstdc++.so.6
       #6  0x00007f3422841213 in __cxa_throw () from /opt/couchbase/bin/../lib/libstdc++.so.6
       #7  0x00007f3425fc1f4d in MagmaKVStore::compactionCallBack(MagmaKVStore::MagmaCompactionCB&, magma::Slice const&, magma::Slice const&, magma::Slice const&) () from /opt/couchbase/bin/../lib/libep.so
       #8  0x00007f342583934a in magma::DocSeqGCContext::Transform(magma::Slice const&, magma::Slice const&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, magma::Slice*) () from /opt/couchbase/bin/../lib/libmagma.so
       #9  0x00007f34257e1dfc in magma::ItemGCFilter::Process(std::vector<std::pair<magma::Slice, magma::Slice>, std::allocator<std::pair<magma::Slice, magma::Slice> > >&, std::vector<std::pair<magma::Slice, magma::Slice>, std::allocator<std::pair<magma::Slice, magma::Slice> > >*) () from /opt/couchbase/bin/../lib/libmagma.so
       #10 0x00007f342584f094 in magma::LSMTree::mergeSSTables(std::vector<std::shared_ptr<magma::Table>, std::allocator<std::shared_ptr<magma::Table> > >&, magma::ItemGCFilter&, unsigned long, double, std::vector<std::shared_ptr<magma::Table>, std::allocator<std::shared_ptr<magma::Table> > >*) () from /opt/couchbase/bin/../lib/libmagma.so
       #11 0x00007f34257da7ea in magma::LSMTree::compactLevelForInputs(int, int, std::unique_lock<std::mutex>&, std::vector<std::shared_ptr<magma::Table>, std::allocator<std::shared_ptr<magma::Table> > >&, std::vector<std::shared_ptr<magma::Table>, std::allocator<std::shared_ptr<magma::Table> > >&, bool, std::function<std::unique_ptr<magma::GCContext, std::default_delete<magma::GCContext> > (bool)>) () from /opt/couchbase/bin/../lib/libmagma.so
       #12 0x00007f34257dbccd in magma::LSMTree::compactLevel(int, std::unique_lock<std::mutex>&, bool, std::function<std::unique_ptr<magma::GCContext, std::default_delete<magma::GCContext> > (bool)>) () from /opt/couchbase/bin/../lib/libmagma.so
       #13 0x00007f34257dbfa8 in magma::LSMTree::compact(std::unique_lock<std::mutex>&) () from /opt/couchbase/bin/../lib/libmagma.so
       #14 0x00007f3425845cc7 in std::_Function_handler<void (), magma::LSMTree::queueCompaction()::{lambda()#1}>::_M_invoke(std::_Any_data const&) () from /opt/couchbase/bin/../lib/libmagma.so
       #15 0x00007f34258990d1 in magma::TaskWorker::loop(void*) () from /opt/couchbase/bin/../lib/libmagma.so
       #16 0x00007f342483f947 in platform_thread_wrap(void*) () from /opt/couchbase/bin/../lib/libplatform_so.so.0.1.0
       #17 0x00007f3422084e65 in start_thread () from /lib64/libpthread.so.0
       #18 0x00007f3421dad88d in clone () from /lib64/libc.so.6
      

      QE Test:

      bucket_storage=magma,rerun=false,GROUP=P0;new_snapshot;iteratively,randomize_value=True,bucket_eviction_policy=fullEviction,divisor=30,doc_size=256,infra_log_level=debug,log_level=debug,upgrade_version=7.0.0-3090 -t magma.magma_rollback.MagmaRollbackTests.test_iteratively_rollback_all_nodes_to_new_snapshot,doc_size=256,upgrade_version=7.0.0-3090,rerun=false,rollback_items=100000,duration=2,GROUP=P0;new_snapshot;iteratively,doc_ops=create:expiry:delete:update,divisor=30,sdk_timeout=60,get-cbcollect-info=True,replicas=3,bucket_storage=magma,log_level=error,vbuckets=128,bucket_eviction_policy=fullEviction,num_rollbacks=2,nodes_init=4,num_items=5000000,randomize_value=True,key_size=12,infra_log_level=critical
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ankush.sharma Ankush Sharma
              ritesh.agarwal Ritesh Agarwal
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty