engines/ep/src/magma-kvstore/magma-kvstore.h
@@ -219,6 +219,8 @@ public:
 
     ~MagmaKVStore() override;
 
+    void deinitialize() override;
+
     void operator=(MagmaKVStore& from) = delete;
 
     /**
